--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@xhs/yam-beer": "^3.16.1",
+    "@xhs/yam-button": "^0.4.0",
+    "@xhs/yam-toast": "^0.1.9",
+    "babel-plugin-jsx-v-model": "^2.0.3",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "element-plus": "^1.0.2-beta.41",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -17,6 +26,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "babel-plugin-import": "^1.13.3",
     "typescript": "~4.1.5"
   },
   "browserslist": [
